<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/green_light"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="24dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="About Us"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <!--Jiahan Chen-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner_background"
                android:elevation="1dp"
                android:translationZ="2dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/chen"/>
                </LinearLayout>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jiahan Chen"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="25dp"/>

                <TextView
                    android:paddingBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16dp"
                    android:text="@string/chen_info"/>
            </LinearLayout>

            <!--Pau Guardia-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner_background"
                android:elevation="1dp"
                android:translationZ="2dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/pau"/>
                </LinearLayout>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pau Guárdia Vies"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="25dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16dp"
                    android:paddingBottom="20dp"
                    android:text="@string/pau_info"/>
            </LinearLayout>

            <!--Lhuis Enrique-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corner_background"
                android:elevation="1dp"
                android:translationZ="2dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/linkedin_lhuis"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/lhuis"/>
                </LinearLayout>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lhuis Enrique Marcelo Sotelo"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="25dp"/>

                <TextView
                    android:paddingBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16dp"
                    android:text="@string/lhuis_info"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>